--- a/package.json
+++ b/package.json
@@ -8,9 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@turf/circle": "^6.0.1",
+    "add": "^2.0.6",
+    "bootstrap": "^4.4.1",
+    "clipboard": "^2.0.4",
     "core-js": "^3.4.4",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
+    "shortid": "^2.2.15",
+    "uuid": "^3.4.0",
     "vue": "^2.6.10",
-    "vuex": "^3.1.2"
+    "vue-notification": "^1.3.20",
+    "vue2-transitions": "^0.3.0",
+    "vuex": "^3.1.2",
+    "vuex-persist": "^2.2.0",
+    "wkx": "^0.4.8",
+    "yarn": "^1.21.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -18,8 +31,9 @@
     "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
+    "eslint": "^5.4",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-cli-plugin-pug": "^1.0.7",
     "vue-template-compiler": "^2.6.10"
   }
 }
