--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-wkt",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -18,6 +18,7 @@
     "shortid": "^2.2.15",
     "uuid": "^3.4.0",
     "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.1",
     "vue-notification": "^1.3.20",
     "vue2-transitions": "^0.3.0",
     "vuex": "^3.1.2",
