--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-wkt",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@turf/area": "^6.0.1",
     "@turf/circle": "^6.0.1",
     "add": "^2.0.6",
     "bootstrap": "^4.4.1",
     "clipboard": "^2.0.4",
     "core-js": "^3.4.4",
     "jquery": "^3.4.1",
+    "number-helper-functions": "^2.0.0",
     "popper.js": "^1.16.1",
     "shortid": "^2.2.15",
     "uuid": "^3.4.0",
@@ -23,7 +25,7 @@
     "vue2-transitions": "^0.3.0",
     "vuex": "^3.1.2",
     "vuex-persist": "^2.2.0",
-    "wkx": "^0.4.8",
+    "wkt-parser-helper": "^1.0.0",
     "yarn": "^1.21.1"
   },
   "devDependencies": {
