--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@turf/circle": "^6.0.1",
     "add": "^2.0.6",
     "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.21.2",
     "clipboard": "^2.0.4",
     "core-js": "^3.4.4",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.20",
     "number-helper-functions": "^2.0.0",
     "popper.js": "^1.16.1",
     "shortid": "^2.2.15",
@@ -36,6 +38,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.4",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.1",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-template-compiler": "^2.6.10"
   }
